# trading_bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
dags/: dag_example.py
data/: test.csv.dummy
docker/: .env  docker-compose.yml  dockerfile_airflow_vm  dockerfile_basic_vm  dockerfile_spark_vm
docs/source/: conf.py  documentation.rst  index.rst  repo_structure.rst  setup_docker.rst  setup_venv.rst
notebooks/: examples.ipynb  spark_example.ipynb
src/: __init__.py  __main__.py
src/app/: analysts.py  close_all.py  handlers.py  listeners.py  orchestrate.py  sell_all.py  trade.py  traders.py
src/backtesting/: backtest.py
src/bot/: tradingbot.py
src/bots/: news_sentiment_trader.py
src/code_examples/: __init__.py  examples.py  spark_example.py
src/config/: __init__.py  _xconfig.py  config.py
src/config/templates/: .template.bot.yaml  .template.credentials.yaml  .template.source.yaml  .template.spark.yaml  .template.sql.yaml
src/data_registry/bronze/: __init__.py
src/data_registry/io/: __init__.py
src/examples/: assets.py  chatbot.py  historical_data.py  live_data.py  trade.py
src/examples/youtube_example/: finbert_utils.py  tradingbot.py
src/execution/backtest/: backtest.py
src/execution/deploy/: live_deploy.py  paper_deploy.py
src/execution/live_deploy/: deploy.py
src/libs/: analysts.py  listeners.py  traders.py
src/ml/: finbert.py
src/strategies/: golden_cross.py
src/trader/: news_sentiment_trader.py
src/utils/: logging.py  spark.py
test/test_core/: __init__.py
