[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache", "notebooks"]
name = "src"
version = "0.0.1.dev0"
authors = ["Marco Scattolin <scattolin.marco@bcg.com>"]
readme = "README.md"
description = ""


[tool.poetry.dependencies]
python = "3.11.*"

# ------------------ basic_vm ---------------------------------
python-dateutil = "2.8.2"
pytz = "2023.3"
PyYAML = "6.0.1"
six = "1.16.0"
typing_extensions = "4.12.2"
traitlets = "5.14.3"
pydantic = "2.6.3"
pydantic-settings = "2.2.1"
numpy = "1.26.4"
pandas = "2.2.2"
tzdata = "2023.3"
pyarrow = "17.0.0"
timedelta = "2020.12.3"


# ------------------ langchain -----------------------
[tool.poetry.group.langchain]
optional = false

[tool.poetry.group.langchain.dependencies]
langchain = "0.1.14"
langchain-openai = "0.1.1"
langchain-community = "0.0.31"


# ------------------ black -----------------------
[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | sphinx
    | dist
    | docs
    | notebooks
    | sphinx
    | venv
  )/
)
'''
